# general

./: README  git.txt
boostasiotest/: CMakeLists.txt  build.sh  google.com.pem
boostasiotest/src/: CMakeLists.txt  client.cpp  client.h  main.cpp  runtests.cpp
cmaketest/: .CMakeLists.txt.swp  CMakeLists.txt  build.sh
cmaketest/src/: .CMakeLists.txt.swp  .main.cpp.swp  .runtests.cpp.swp  CMakeLists.txt  main.cpp  runtests.cpp
dx3dview/: CubeMesh.cpp  CubeMesh.h  MeshGen.cpp  MeshGen.h  SphereMesh.cpp  SphereMesh.h  TorusMesh.cpp  TorusMesh.h  dx3dview.cpp  dx3dview.h  dx3dview.sln  dx3dview.vcproj  dx3dview.vcxproj  dx3dview.vcxproj.filters  shader.fx
gameeng/: build.sh  command.cpp  command.h  gameeng  main.cpp  state.cpp  state.h
jack.metro/: makefile  metro.c  metronome
objectctest/: build.sh  main.h  main.m  objectctest
restsvrcpp/: build.sh  main.cpp  restsvrcpp
